# extract_email

./: .gitignore  Makefile  Makefile.python  Makefile.python.build  README.md  pyproject.toml  requirements.txt  setup.cfg
src/: extract_email.py
src/ee/: extract_email.py
