[project]
name = "extract_email"
version = "0.0.1"
license = "MIT"
description = "{cookiecutter.description}}"
authors = [
    { name = "Troy Williams", email = "troy.williams@bluebill.net" }
]
readme = "README.md"

# requires-python = ">= 3.12"
dependencies = [
    "appdirs",
    "click",
    "rich",
    "beautifulsoup4",
    "lxml",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest",
    "black",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/extract_email"]

[project.scripts]
ee="extract_email.extract_email:main"